--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "debug": "~2.0.0",
     "ethereum.js": "*",
-    "express.io": "^1.1.13"
+    "express.io": "^1.1.13",
+    "underscore": "^1.7.0"
   }
 }
