--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "debug": "~2.0.0",
     "ethereum.js": "*",
     "express.io": "^1.1.13",
+    "xmlhttprequest": "*",
+    "slugs": "^0.1.3",
     "underscore": "^1.7.0"
   }
 }
