--- a/package.json
+++ b/package.json
@@ -10,10 +10,9 @@
   "dependencies": {
     "debug": "~2.0.0",
     "ethereum.js": "*",
+    "lodash": "^3.2.0",
     "primus": "^2.4.12",
     "primus-emit": "^0.1.2",
-    "slugs": "^0.1.3",
-    "underscore": "^1.7.0",
     "ws": "^0.7.1"
   },
   "scripts": {
