--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "primus-emit": "^0.1.2",
     "primus-spark-latency": "^0.1.1",
     "shelljs": "^0.4.0",
+    "sleep": "^2.0.0",
     "ws": "^0.7.1"
   },
   "scripts": {
