--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lib": "./lib"
   },
   "dependencies": {
+    "debounce": "^1.0.0",
     "debug": "~2.1.3",
     "ethereum.js": "0.2.4",
     "lodash": "^3.6.0",
