--- a/package.json
+++ b/package.json
@@ -8,16 +8,16 @@
     "lib": "./lib"
   },
   "dependencies": {
-    "debounce": "^1.0.0",
-    "debug": "~2.1.3",
-    "lodash": "^3.6.0",
-    "primus": "^3.0.2",
-    "primus-emit": "^0.1.2",
-    "primus-spark-latency": "^0.1.1",
-    "shelljs": "^0.4.0",
-    "sleep": "^2.0.0",
-    "web3": "0.2.8",
-    "ws": "^0.7.1"
+    "debounce": "1.0.0",
+    "debug": "2.1.3",
+    "lodash": "3.7.0",
+    "primus": "3.0.2",
+    "primus-emit": "0.1.2",
+    "primus-spark-latency": "0.1.1",
+    "shelljs": "0.4.0",
+    "sleep": "2.0.0",
+    "web3": "0.3.1",
+    "ws": "0.7.1"
   },
   "scripts": {
     "start": "node ./app.js"
