--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,14 @@
 language: node_js
 node_js:
   - "0.12"
+  - "0.11"
+env:
+  global:
+    - secure: Qdkmi13nqcXskABBhbuGZmRakh4orOW1dalkSCyUbzGuYf0OdYF8ttNVuJa0WSWI4KhNXhtz2p3I8dM95wL++LCVqXFmIvZtX8Nca36KlNxIPNXPjn0odayh+c4pgrhrbz8TDmDXl9IPuZmNz8HHtN7xmIn6YDcm13wA3gTmfwo=
+    - RPC_HOST=localhost
+    - RPC_PORT=8080
+    - LISTENING_PORT=30303
+    - INSTANCE_NAME="Travis Node"
+    - CONTACT_DETAILS="marian@ethdev.com"
+    - WS_SERVER="wss://eth-netstats.herokuapp.com"
+    - NODE_ENV="production"
