--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "eth-net-intelligence-api",
   "description": "Ethereum Network Intelligence API",
-  "version": "0.0.6",
+  "version": "0.0.7",
   "private": true,
   "main": "./app.js",
   "directories": {
@@ -15,7 +15,7 @@
     "primus-emit": "0.1.2",
     "primus-spark-latency": "0.1.1",
     "shelljs": "0.4.0",
-    "sleep": "2.0.0",
+    "temporal": "^0.4.0",
     "web3": "0.3.4",
     "ws": "0.7.1"
   },
