--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "async": "^0.9.0",
+    "chalk": "^1.0.0",
     "debounce": "1.0.0",
     "debug": "2.1.3",
     "lodash": "3.7.0",
