added max restarts

--- a/app.json
+++ b/app.json
@@ -5,6 +5,7 @@
     "log_date_format"   : "YYYY-MM-DD HH:mm Z",
     "merge_logs"        : false,
     "watch"             : false,
+    "max_restarts"      : 10,
     "exec_interpreter"  : "node",
     "exec_mode"         : "fork_mode",
     "env":
