--- a/package.json
+++ b/package.json
@@ -9,15 +9,21 @@
   },
   "dependencies": {
     "async": "^1.0.0",
+    "bignumber.js": "^2.0.7",
     "chalk": "^1.0.0",
+    "color-convert": "0.5.0",
+    "color-string": "0.2.0",
+    "crypto-js": "^3.1.5",
     "debounce": "1.0.0",
     "debug": "2.2.0",
     "lodash": "3.9.3",
     "primus": "3.0.2",
     "primus-emit": "0.1.2",
     "primus-spark-latency": "0.1.1",
+    "utf8": "^2.1.1",
     "web3": "0.12.2",
-    "ws": "0.7.2"
+    "ws": "0.7.2",
+    "xmlhttprequest": "^1.7.0"
   },
   "scripts": {
     "start": "node ./app.js"
