--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "eth-net-intelligence-api",
   "description": "Ethereum Network Intelligence API",
-  "version": "0.0.17git",
+  "version": "0.0.18",
   "private": true,
   "main": "./app.js",
   "directories": {
