--- a/.travis.yml
+++ b/.travis.yml
@@ -9,5 +9,5 @@ env:
     - LISTENING_PORT=30303
     - INSTANCE_NAME="Travis Node"
     - CONTACT_DETAILS="marian@ethdev.com"
-    - WS_SERVER="wss://stats.ethdev.com"
+    - WS_SERVER="wss://rpc.ethstats.net"
     - NODE_ENV="production"
