--- a/app.json.example
+++ b/app.json.example
@@ -16,7 +16,7 @@
       "LISTENING_PORT"  : "30303",
       "INSTANCE_NAME"   : "",
       "CONTACT_DETAILS" : "",
-      "WS_SERVER"       : "wss://stats.ethdev.com",
+      "WS_SERVER"       : "wss://rpc.ethstats.net",
       "WS_SECRET"       : "see http://forum.ethereum.org/discussion/2112/how-to-add-yourself-to-the-stats-dashboard-its-not-automatic",
       "VERBOSITY"       : 2
     }
