--- a/package.json
+++ b/package.json
@@ -2,11 +2,23 @@
   "name": "eth-net-intelligence-api",
   "description": "Ethereum Network Intelligence API",
   "version": "0.1.1",
-  "private": true,
   "main": "./app.js",
   "directories": {
     "lib": "./lib"
   },
+  "scripts": {
+    "start": "node ./app.js"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/gangnamtestnet/eth-net-intelligence-api.git"
+  },
+  "author": "Ikmyeong Na <naikmyeong@naver.com>",
+  "license": "LGPL-3.0",
+  "bugs": {
+    "url": "https://github.com/gangnamtestnet/eth-net-intelligence-api/issues"
+  },
+  "homepage": "https://github.com/gangnamtestnet/eth-net-intelligence-api",
   "dependencies": {
     "async": "^1.0.0",
     "chalk": "^1.0.0",
@@ -18,31 +30,5 @@
     "primus-spark-latency": "0.1.1",
     "web3": "0.15.3",
     "ws": "^1.0.1"
-  },
-  "scripts": {
-    "start": "node ./app.js"
-  },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/cubedro/eth-net-intelligence-api.git"
-  },
-  "homepage": "https://github.com/cubedro/eth-net-intelligence-api",
-  "bugs": {
-    "url": "https://github.com/cubedro/eth-net-intelligence-api/issues"
-  },
-  "keywords": [
-    "ethereum",
-    "network",
-    "intelligence",
-    "API"
-  ],
-  "author": "ethdev.com",
-  "authors": [
-    {
-      "name": "Marian Oancea",
-      "email": "marian@ethdev.com",
-      "url": "https://github.com/cubedro"
-    }
-  ],
-  "license": "LGPL-3.0"
+  }
 }
